Add NightMonkeys coder for HEIF/AVIF/JXL on Java 22+ (3.1.0.8-ALPHA).
Bundle imageio-heif and imageio-jxl; register NightMonkeysCoder only when Runtime.version().feature() >= 22.

Co-authored-by: Cursor <cursoragent@cursor.com>